--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,3 +1,6 @@
-fastapi[all]==0.78.0
+fastapi[all]==0.89.0
 uvicorn[standard]==0.17.6
 pytest
+psycopg[binary,pool]==3.1.2
+jwtdown-fastapi>=0.5.0
+requests==2.28.2
