--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ lint-test-job:
   script:
     - pip install flake8
     - flake8 api
-
 # # Run the unit tests
 # api-unit-tests-job:
 #   image: python:3-bullseye
@@ -40,7 +39,6 @@ lint-test-job:
 #   only:
 #     - main
 
-
 # # Build the React/JavaScript front-end
 # build-front-end-job:
 #   stage: build
@@ -52,7 +50,7 @@ lint-test-job:
 #     # CI/CD variables, that value will override the value here.
 #     # You need to substitute in your real values for
 #     # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
-#     PUBLIC_URL: https://GROUP_NAME.gitlab.io/PROJECT_NAME/
+#     PUBLIC_URL: https://the_boys.gitlab.io/gymscribe/
 #     REACT_APP_API_HOST: https://DEPLOYED_API_SERVICE.mod3projects.com
 #   script:
 #     - cd ghi
